log
Thu 04 May 2023 04:38:05 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  2|4
total_score: 15/70
072d54c
Sat 06 May 2023 10:52:50 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:9: error: unused variable ‘j’ [-Werror=unused-variable]
   47 |   int i,j;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
815deab
Sat 06 May 2023 10:53:18 PM UTC: 
 sudoku.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a959700
Sat 06 May 2023 11:02:29 PM UTC: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  5|3
total_score: 35/70
0be764e
Sat 06 May 2023 11:03:55 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
b1c6375
Sat 06 May 2023 11:04:30 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:129:12: error: ‘n’ undeclared (first use in this function)
  129 |  push(pila,n);
      |            ^
sudoku.c:129:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3b7a759
Sat 06 May 2023 11:04:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
8aa1a82
Sat 06 May 2023 11:05:13 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:158:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  158 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
408abed
Sat 06 May 2023 11:05:21 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
16762d5
